zabrzeの設定ファイルを追加し、dot_mise.tomlにstarshipを追加。zshrcにzabrzeとstarshipの初期化コードを追加。

--- a/home/dot_mise.toml
+++ b/home/dot_mise.toml
@@ -20,6 +20,8 @@ fd = "latest"
 ripgrep = "latest"
 eza = "latest"
 zoxide = "latest"
+starship = "latest"
+#"cargo:zabrze" = "latest"
 
 # Development tools
 shfmt = "latest"
