--- a/home/dot_config/sheldon/plugins.toml
+++ b/home/dot_config/sheldon/plugins.toml
@@ -24,3 +24,20 @@ github = "zsh-users/zsh-history-substring-search"
 # github = "Schniz/fnm"
 # apply = ["PATH", "source"]
 # hooks.post = "eval \"$(fnm env --use-on-cd)\""
+
+[plugins.compinit]
+inline = 'autoload -U compinit && compinit'
+
+[plugins.zsh-completions]
+github = "zsh-users/zsh-completions"
+defer = "2"  # 遅延読み込み
+
+
+[plugins.z]
+github = "rupa/z" 
+
+[plugins.mise-completion]
+inline = 'eval "$(mise completion zsh)"'
+
+[plugins.fzf-tab]
+github = "Aloxaf/fzf-tab"
