Sheldonプラグイン設定を更新し、zsh-completionsプラグインのコメントアウトを追加。補完システムの設定を整理。

--- a/home/dot_config/sheldon/plugins.toml
+++ b/home/dot_config/sheldon/plugins.toml
@@ -55,6 +55,7 @@ inline = 'eval "$(mise completion zsh)"'
 [plugins.fzf-tab]
 github = "Aloxaf/fzf-tab"
 
-[plugins.make-completion]
-github = "zsh-users/zsh-completions"
-use = ["src/_make"]
+# [plugins.zsh-completion]
+# # https://github.com/zsh-users/zsh-completions/tree/master/src
+# github = "zsh-users/zsh-completions"
+# use = ["src/_npm", "src/_openssl", "src/_setup.py", "src/_uuidd", "src/_uuidgen"]
